3821B1PE1/9_gelu_ocl/chuvashov_andrey/log.txt
In file included from /home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:4:
/usr/include/CL/opencl.hpp:437:112: note: ‘#pragma message: opencl.hpp: CL_HPP_TARGET_OPENCL_VERSION is not defined. It will default to 300 (OpenCL 3.0)’
  437 | # pragma message("opencl.hpp: CL_HPP_TARGET_OPENCL_VERSION is not defined. It will default to 300 (OpenCL 3.0)")
      |                                                                                                                ^
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&)’:
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:66:9: error: invalid conversion from ‘size_t’ {aka ‘long unsigned int’} to ‘const void*’ [-fpermissive]
   66 |         input_size
      |         ^~~~~~~~~~
      |         |
      |         size_t {aka long unsigned int}
In file included from /home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:4:
/usr/include/CL/opencl.hpp:7639:21: note:   initializing argument 5 of ‘cl_int cl::CommandQueue::enqueueWriteBuffer(const cl::Buffer&, cl_bool, cl::size_type, cl::size_type, const void*, cl::vector<cl::Event>*, cl::Event*) const’
 7639 |         const void* ptr,
      |         ~~~~~~~~~~~~^~~
